# x-nav

./: .gitignore  README.md
app/: README.md  pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/lib/: README.md  constants.dart  database.dart  database.g.dart  main.dart
app/lib/component/: data.dart  heat_tile.dart  reusable_map.dart  ride_stats_card.dart
app/lib/page/: README.md  history.dart  home.dart  map.dart  mbtiles_manager.dart  routes.dart  tachometer.dart  user.dart
app/lib/page/history/: history_detail.dart  segment_detail.dart
app/lib/page/routes/: edit_route.dart
app/lib/utils/: analysis_utils.dart  cache.dart  data_loader.dart  data_parser.dart  fit.dart  fit_parser.dart  gpx_parser.dart  location_provier.dart  model.dart  mvt_theme.dart  osrm.dart  path_utils.dart  prefs.dart  provider.dart  storage.dart
app/lib/utils/fit_parser/: fit_parser.dart
app/lib/utils/fit_parser/src/: data_message.dart  definition_message.dart  field.dart  fit_file.dart  fit_type.dart  (+1 more)
app/lib/widget/: ride_stats_card.dart
app/macos/Flutter/: GeneratedPluginRegistrant.swift
app/test/: fit_parser_test.dart  fit_parser_test.mocks.dart  sql_rw_history.dart  widget_test.dart
app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
esp32/: env.sh  main.py
web/: Dockerfile  Makefile  README.md  docker-compose.yml  fit2json.py  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
web/src/: App.vue  router.ts
web/src/views/: convert.vue  home.vue  track.js  track.vue
(+3 files in other folders)
