[project]
name = "web"
version = "0.1.0"
description = ""
authors = [
    {name = "xeonds",email = "xeonds@stu.xidian.edu.cn"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fitparse (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
